@@ -5,7 +5,6 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
@@ -21,7 +20,7 @@ public class LogService {
             List<String> logs = Files.readAllLines(Paths.get(logFilePath))
                 .stream()
                 .filter(line -> line.contains(date))
-                .collect(Collectors.toList());
+                .toList();
             return String.join("\n", logs);
         } catch (IOException e) {
             LOGGER.error("Failed to read log file: {}", e.getMessage());
